assets/scss/layouts/_mobile_nav.scss
.mobile-nav-new{
   height: 64px;
   width: 100%;
   position: fixed;
   left: 0;
   bottom: 0;
   z-index: 10;
   background-image: url("/nav/light.svg");
   background-repeat: no-repeat;
   background-position: center center;

   ul{
      width: 100%;
      padding: 0;
      margin: 0;
      display: flex;
      justify-content: space-between;
      align-items: center;
      height: 53px;
      z-index: 12;
      position: absolute;
      left: 0;
      bottom: 0;
      li{

         width: 20%;

         a{
            flex-direction: column;
            display: flex;
            justify-content: center;
            align-items: center;
            color: #9AA4B2;
            font-size: 12px;
            font-weight: 500;
            line-height: 14px;
            letter-spacing: 0;

            svg{
               width: 24px;
               height: 24px;
               margin-bottom: 5px;
            }
         }

         a.exact-active{
            color: #081A3E;
         }

         a.exact-active svg path{
            fill: #081A3E;
            stroke: #081A3E;
         }

         a.exact-active span{
            color: #081A3E;
         }
      }

      li:nth-child(3) {
         margin: -42px 0 0 0;

         a {

            color: #9AA4B2;
            font-size: 12px;
            font-weight: 500;
            line-height: 14px;
            letter-spacing: 0;

            svg{
               width: unset;
               height: unset;
               margin-bottom: 10px;
            }
         }

      }

   }

   &:before,
   &:after {
      content: '';
      position: absolute;
      bottom: 0;
      width: 33%;
      height: 61px;
      background-color: #FFFFFF;
   }

   &:before {
      left: 0;
   }

   &:after {
      right: 0;
   }
}

.dark-mode{
   .mobile-nav-new{
      background-image: url("/nav/dark.svg");

      &:before,
      &:after {
         background-color: #1B2434;
      }

      ul {
         li{
            a.exact-active{
               color: #fff;
            }

            a.exact-active svg path{
               fill: #fff;
               stroke: #fff;
            }

            a.exact-active span{
               color: #fff;
            }
         }
      }
   }
}

